[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/iTitus/aoc2022"
license = "MIT"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.10"
lazy_static = "1.4"
num = "0.4"
regex = "1"
rustc-hash = "1.1"

[dev-dependencies]
pretty_assertions = "1.3"
