[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/iTitus/aoc2022"
license = "MIT"

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
itertools = "0.12"
lazy_static = "1.4"
nalgebra = "0.32"
num = "0.4"
pathfinding = "4.1"
regex = "1"
rustc-hash = "1.1"
tinyvec = "1.6"

[dev-dependencies]
pretty_assertions = "1.3"
